src/test/ReadOnly/ReadOnly.expected
error: ReadOnly.panda:10:10: 'ReadOnly.test' may not be modified
1 error
